--- a/pkg/triton/package.json
+++ b/pkg/triton/package.json
@@ -1,13 +1,14 @@
 {
   "name": "triton",
   "label": "Triton",
-  "description": "triton plugin",
+  "description": "Triton plugin",
+  "icon": "./triton.svg",
   "version": "0.1.0",
   "private": false,
   "rancher": {
     "annotations": {
-      "catalog.cattle.io/rancher-version": ">= v2.9.0",
-      "catalog.cattle.io/ui-extensions-version": ">= 2.0.0"
+      "catalog.cattle.io/rancher-version": ">= v2.8.5",
+      "catalog.cattle.io/ui-extensions-version": ">= 1.2.0"
     }
   },
   "scripts": {
