--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "rancher-extension-triton",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "engines": {
-    "node": ">=12"
+    "node": ">=20"
   },
   "dependencies": {
-    "@rancher/components": "0.2.1-alpha.0",
-    "@rancher/shell": "^1.2.3",
-    "@types/lodash": "4.14.184",
-    "core-js": "3.21.1",
-    "css-loader": "6.7.3"
+    "@rancher/shell": "^3.0.4"
   },
   "resolutions": {
-    "**/webpack": "4",
-    "@types/node": "^16",
-    "glob": "7.2.3"
+    "@types/node": "~20.10.0",
+    "@types/lodash": "4.17.5"
   },
   "scripts": {
     "dev": "NODE_ENV=dev ./node_modules/.bin/vue-cli-service serve",
